tests/ui/main_macro/pass/basic_main.rs
use chronographer::main;

#[main]
async fn main(sched: MyScheduler) {}