tests/ui/main_macro/fail/not_main.rs
use chronographer::main;

#[main]
async fn not_main(sched: MyScheduelr) {}